# gptide

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
docs/: api.rst  conf.py  environment.yml  examples.rst  index.rst  whatsnew.rst
docs/examples/: example01_1d_kernel_introduction.ipynb  example_02_1d_kernel_estimation_mle.ipynb  example_03_1d_kernel_estimation_mcmc.ipynb  example_04_1d_kernel_multplication_estimation_mcmc.ipynb  example_05_2d_kernel_estimation_mcmc.ipynb  example_05_3d_Vecchia_mle.ipynb  example_06_1d_kernel_estimation_blackjax.ipynb
examples/: example01_1d_kernel_introduction.ipynb
gptide/: __init__.py  cov.py  covjax.py  gp.py  gpdask.py  gpjax.py  gpscipy.py  gptoeplitz.py  gpvecchia.py  mcmc.py  mcmcjax.py  mle.py  stats.py  vecchia_utils.py
