[metadata]
name = gptide
author = Lachlan Astfalck; Matt Rayson; Andrew Zulberti
author_email = lachlan.astfalck@uwa.edu.au
description = Gaussian Process regression tools for oceanography and engineering.
license = MIT
long_description_content_type = text/markdown
url = https://github.com/TIDE-ITRH/gptide
project_urls =
    Bug Tracker = https://github.com/TIDE-ITRH/gptide/issues
    Changelog = https://github.com/TIDE-ITRH/gptide/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT
    Intended Audience :: Developers

[options]
package_dir =
    = gptide
packages = find:
install_requires =
    numpy
    scipy
    xarray
    matplotlib
    emcee
    sklearn
    numba
    psutil
	

[options.packages.find]
where = gptide

[options.entry_points]
console_scripts =
    gptide = gptide.app:entry_point
